[package]
name = "pixel-palette-colorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
indicatif = "0.18.4"
palette = "0.7"
rayon = "1.12.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
